# healthy_herron

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
compose/production/postgres/: Dockerfile
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
healthy_herron/: __init__.py  conftest.py
healthy_herron/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
healthy_herron/core/: models.py
healthy_herron/fasting/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
healthy_herron/fasting/api/: __init__.py
healthy_herron/fasting/management/commands/: archive_old_fasts.py
healthy_herron/fasting/migrations/: 0001_initial.py  __init__.py
healthy_herron/fasting/templates/fasting/: base.html  dashboard.html  end_fast.html  fast_confirm_delete.html  fast_detail.html  fast_form.html  fast_list.html  start_fast.html  timer_fragment.html
healthy_herron/fasting/tests/: __init__.py  factories.py  test_forms.py  test_models.py  test_views.py
healthy_herron/static/css/: fasting.css
healthy_herron/templates/: base.html
healthy_herron/templates/components/: loading.html
healthy_herron/users/: adapters.py  admin.py  apps.py  forms.py  models.py  signals.py  views.py
healthy_herron/users/api/: serializers.py  urls.py  views.py
healthy_herron/users/migrations/: 0001_initial.py  0002_user_timezone.py  0003_profile.py
healthy_herron/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
healthy_herron/users/tests/api/: test_urls.py  test_views.py
locale/: README.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
specs/001-fasting-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fasting-app/checklists/: requirements.md
specs/001-fasting-app/contracts/: api.yaml
specs/001-user-profile-model/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-profile-model/checklists/: requirements-quality.md  requirements.md
specs/001-user-profile-model/contracts/: openapi.yaml
